--- a/visualizer/docker-compose.yml
+++ b/visualizer/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       labels:
         - "traefik.enable=true"
         - "traefik.port=9000"
-        - "traefik.frontend.rule=Host:portainer.com"
+        - "traefik.frontend.rule=Host:portainer.thomrick.com"
 networks:
   proxy:
     external:
